<resources>
    <string name="app_name">RegistrationForm</string>
    <string name="header">Registration Form</string>
    <string name="para1">Welcome to Adventure Learning Club</string>
    <string name="fullname">Full Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="studentid">Student ID</string>
    <string name="school">School</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone</string>
    <string name="submit">Submit</string>
</resources>